syntax = "proto3";

package com.pm.borrowerservice.events;

option java_package = "com.pm.borrowerservice.events";
option java_outer_classname = "AdminEventsProto";
option java_multiple_files = true;

// Loan Status Update Event from Officer Service
message LoanStatusUpdateEvent {
  int64 application_id = 1;
  int64 borrower_id = 2;
  string old_status = 3;
  string new_status = 4;
  string updated_by = 5;
  string updated_at = 6;
  string rejection_reason = 7;  // Optional, only for rejected loans
  string event_id = 8;
  string event_timestamp = 9;
}

// Document Status Update Event from Officer Service
message DocumentStatusUpdateEvent {
  int64 document_id = 1;
  int64 borrower_id = 2;
  int64 loan_application_id = 3;  // Optional, may be 0 if not associated with loan
  string old_status = 4;
  string new_status = 5;
  string updated_by = 6;
  string updated_at = 7;
  string rejection_reason = 8;  // Optional, only for rejected documents
  string event_id = 9;
  string event_timestamp = 10;
}
